Add link to source on github

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -42,7 +42,7 @@
         from the start to use Twitter authentication, which means that people with private accounts 
         (like, er, me) can use it.</p>
         
-    <p>- Paul Mison (<a href="https://www.twitter.com/blech">@blech</a>)</p>
+    <p>- Paul Mison (<a href="https://www.twitter.com/blech">@blech</a>; <a href="https://github.com/blech/intersect-pm/">source</a>)</p>
     </div>
 </div>
 </body>
