--- a/templates/list.html
+++ b/templates/list.html
@@ -20,6 +20,7 @@
            height: 100%; }
     #big a:hover { color: #66f; background: none; }
   </style>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
 
 </head>
 <body>
@@ -41,6 +42,35 @@
     </div>
   </div>
 </div>
+
+<script>
+
+var width = 1000,
+    height = 1000;
+
+var svg = d3.select("div#content").insert("svg", "div#blurb")
+    .style("position", "absolute")
+    .attr("width", width)
+    .attr("height", height);
+
+var scale = 500/{{ stats.distance }}
+
+var me = svg.append("circle")
+            .attr("cx", 250)
+            .attr("cy", height/2)
+            .attr("r", Math.sqrt({{ stats.me }}/Math.PI)*scale)
+            .style("fill", "rgba(100, 0, 0, .25)");
+
+var them = svg.append("circle")
+              .attr("cx", 750)
+              .attr("cy", height/2)
+              .attr("r", Math.sqrt({{ stats.other }}/Math.PI)*scale)
+              .style("fill", "rgba(100, 0, 0, .25)");
+
+
+</script>
+
+
 </body>
 </html>
 
