--- a/templates/list.html
+++ b/templates/list.html
@@ -58,7 +58,9 @@ var svg = d3.select("div#content").insert("svg", "div#blurb")
     .attr("width", width)
     .attr("height", height);
 
-var scale = 500/{{ stats.distance }}
+console.log("width/height are "+width+", "+height)
+
+var scale = width/(2*{{ stats.distance }})
 
 var me = svg.append("circle")
             .attr("cx", width/4)
