--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-
-  <title>intersect.husk.org.</title>
-  <link href="/static/collected.css" media="screen" type="text/css" rel="stylesheet" />
-
-  <meta name="author" content="Paul Mison" />
-  <meta name="description" content="Paul Mison, elsewhere." />
-  <meta name="keywords" content="" />
-
-  <style type="text/css">
-    body { height: 100%; }
-    #big { color: #00f; 
-           font-size: 76px; 
-           font-weight:600; 
-           line-height: 0.8em; 
-           letter-spacing: -0.05em;
-           height: 100%; }
-    #big a:hover { color: #66f; background: none; }
-  </style>
-
-</head>
-<body>
-
-<div id="wrap">
-  <div class="header">
-    <h1>intersect.husk.org. <span class="sub">find twitter user list intersections.</span></h1>
-  </div>
-    
+{% extends "base.html" %}
+{% block title %}intersect.husk.org. start.{% endblock %}
+{% block content %}    
   <div id="content">
     <h2>Signed in as <a href="https://www.twitter.com/{{ user.screen_name }}">{{ user.screen_name }}</a>.</h2>
 
@@ -40,10 +12,4 @@
       </form>
     </div>
   </div>
-</div>
-</body>
-</html>
-
-<!-- 
--*- tab-width: 2; x-font-size: 9;  -*-
- -->
+{% endblock %}
