--- a/templates/list.html
+++ b/templates/list.html
@@ -1,31 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta content="text/html; charset=utf-8" http-equiv="content-type" />
+{% extends "base.html" %}
+{% block title %}intersect.husk.org. showing {{ user.screen_name }} and {{ stats.name }}.{% endblock %}
 
-  <title>intersect.husk.org.</title>
-  <link href="/static/collected.css" media="screen" type="text/css" rel="stylesheet" />
-
-  <meta name="author" content="Paul Mison" />
-  <meta name="description" content="Paul Mison, elsewhere." />
-  <meta name="keywords" content="" />
-
-  <style type="text/css">
-    body { height: 100%; }
-    div#blurb { margin-top:16px; color: #666; }
-    ul { width: 100%; min-height: 200px; font-size: 1.25em; line-height: 1.4em; }
-    ul li { float: left; width: 10em; list-style-type: none; }
-  </style>
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-
-</head>
-<body>
-
-<div id="wrap">
-  <div class="header">
-    <h1>intersect.husk.org. <span class="sub">find twitter user list intersections.</span></h1>
-  </div>
-    
+{% block content %}    
   <div id="content">
     <h2>Signed in as <a href="https://www.twitter.com/{{ user.screen_name }}">{{ user.screen_name }}</a>.</h2>
 
@@ -37,10 +13,10 @@
       {% endfor %}</ul>
     </div>
   </div>
-</div>
+{% endblock %}
 
+{% block script %}
 <script>
-
 var e=document.documentElement,
     g=document.getElementsByTagName('body')[0],
     width=window.innerWidth||e.clientWidth||g.clientWidth,
@@ -72,13 +48,5 @@ var them = svg.append("circle")
               .style("fill", "rgba(100, 0, 0, .25)")
             .style("stroke", "rgba(0, 0, 0, .5)");
 
-
 </script>
-
-
-</body>
-</html>
-
-<!-- 
--*- tab-width: 2; x-font-size: 9;  -*-
- -->
+{% endblock %}
