Add logout/forget page; remove debugging; add some useful links

--- a/templates/list.html
+++ b/templates/list.html
@@ -12,6 +12,9 @@
           <li class="{{ user.screen_name }}"><a href="https://www.twitter.com/{{ user.screen_name }}" title="{{ user.screen_name }}">{{ user.name }}</a></li>
       {% endfor %}</ul>
     </div>
+    
+    <div class="clear"><a href="/">Search again</a>? <a href="/forget">Log out</a>?</div>
+
   </div>
 {% endblock %}
 
