--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,10 @@
 
   <style type="text/css">
     body { height: 100%; }
-    div#blurb { margin-top:16px; color: #666; }
+    div#blurb { margin-top: 16px; color: #666; }
     ul { width: 100%; min-height: 200px; font-size: 1.25em; line-height: 1.4em; }
     ul li { float: left; width: 10em; list-style-type: none; }
+    .clear { clear: both; padding-top: 16px;}
   </style>
   <script src="http://d3js.org/d3.v3.min.js"></script>
 
@@ -23,7 +24,7 @@
 
 <div id="wrap">
   <div class="header">
-    <h1>intersect.husk.org. <span class="sub">find twitter user list intersections.</span></h1>
+    <h1><a href="/">intersect.husk.org</a>. <span class="sub">find twitter user list intersections.</span></h1>
   </div>
     
   {% block content %}
