Apply colours (ht @fionamiller)

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,11 @@
 
   <style type="text/css">
     body { height: 100%; }
+    h1 { background-color: #fff; padding: 10px; opacity: 0.5; display: inline; position: relative; left: -10px; }
     div#blurb { margin-top: 16px; color: #666; }
     ul { width: 100%; min-height: 200px; font-size: 1.25em; line-height: 1.4em; }
     ul li { float: left; width: 10em; list-style-type: none; }
+    ul li a { color: #36f; }
     .clear { clear: both; padding-top: 16px;}
   </style>
   <script src="http://d3js.org/d3.v3.min.js"></script>
