--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 
   <title>{% block title %}{% endblock %}</title>
   <link href="/static/collected.css" media="screen" type="text/css" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 
   <meta name="author" content="Paul Mison" />
   <meta name="description" content="Paul Mison, elsewhere." />
@@ -12,7 +13,7 @@
 
   <style type="text/css">
     body { height: 100%; }
-    h1 { background-color: #fff; padding: 10px; opacity: 0.5; display: inline; position: relative; left: -10px; }
+    h1 { background-image: url(/static/whitebg50pc.png); padding: 10px; opacity: 1; display: inline; position: relative; left: -10px; }
     div#blurb { margin-top: 16px; color: #666; }
     ul { width: 100%; min-height: 200px; font-size: 1.25em; line-height: 1.4em; }
     ul li { float: left; width: 10em; list-style-type: none; }
