--- a/templates/auth.html
+++ b/templates/auth.html
@@ -16,7 +16,8 @@
         
       <p>I hope you find it useful.</p>
         
-      <p>- Paul Mison (<a href="https://www.twitter.com/blech">@blech</a>; <a href="https://github.com/blech/intersect-pm/">source</a>)</p>
+      <p>- Paul Mison (<a href="https://www.twitter.com/blech">@blech</a>). View <a href="https://github.com/blech/intersect-pm/">source</a> on github.<br>
+         - with thanks to <a href="https://www.twitter.com/fionamiller">@fionamiller</a> and <a href="https://twitter.com/garrettc">@garrettc</a> for design advice</p>
     </div>
   </div>
 {% endblock %}
