Fix title on list page

--- a/templates/list.html
+++ b/templates/list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}intersect.husk.org. showing {{ user.screen_name }} and {{ stats.name }}.{% endblock %}
+{% block title %}intersect.husk.org. showing {{ stats.me }} and {{ stats.them }}.{% endblock %}
 
 {% block content %}    
   <div id="content">
