Move background circles up for large window heights

--- a/templates/list.html
+++ b/templates/list.html
@@ -41,16 +41,18 @@ var svg = d3.select("div#content").insert("svg", "div#blurb")
 console.log("width/height are "+width+", "+height)
 
 var scale = width/(2*{{ stats.distance }})
+var midpoint = height/2
+if (midpoint > 400) { midpoint = 400; }
 
 var me = svg.append("circle")
             .attr("cx", width/4)
-            .attr("cy", height/2)
+            .attr("cy", midpoint)
             .attr("r", Math.sqrt({{ stats.mine }}/Math.PI)*scale)
             .style("fill", "rgba(255, 102, 255, .25)");
 
 var them = svg.append("circle")
               .attr("cx", 3*width/4)
-              .attr("cy", height/2)
+              .attr("cy", midpoint)
               .attr("r", Math.sqrt({{ stats.theirs }}/Math.PI)*scale)
               .style("fill", "rgba(102, 204, 255, .25)");
 
