--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,13 @@
 
   <style type="text/css">
     body { height: 100%; }
-    h1 { background-image: url(/static/whitebg50pc.png); padding: 10px; opacity: 1; display: inline; position: relative; left: -10px; }
     div#blurb { margin-top: 16px; color: #666; }
     ul { width: 100%; min-height: 200px; font-size: 1.25em; line-height: 1.4em; }
     ul li { float: left; width: 10em; list-style-type: none; }
+    /* ul li a { color: #36f; } */
     ul li a { color: #36f; }
     .clear { clear: both; padding-top: 16px;}
+{% block style %}{% endblock %}
   </style>
   <script src="http://d3js.org/d3.v3.min.js"></script>
 
