--- a/templates/list.html
+++ b/templates/list.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 {% block title %}intersect.husk.org. showing {{ stats.me }} and {{ stats.them }}.{% endblock %}
-
+{% block style %}
+    h1 { background-image: url(/static/whitebg50pc.png); padding: 10px; opacity: 1; display: inline; position: relative; left: -10px; }
+    .me a { color: rgb(255, 102, 255); background-color: #fff; }
+    span.them a { color: rgb(102, 204, 255); background-color: #fff; }
+{% endblock %}
 {% block content %}    
   <div id="content">
     <h2>Signed in as <a href="https://www.twitter.com/{{ user.screen_name }}">{{ user.screen_name }}</a>.</h2>
 
     <div id="blurb">
-      <p>{% if user.screen_name == stats.me %}You have{% else %}<a href="https://www.twitter.com/{{ stats.me }}/">{{ stats.me }}</a> has{% endif %} 
-         {{ stats.mine }} followers, and <a href="https://www.twitter.com/{{ stats.them }}">{{ stats.them }}</a> has {{ stats.theirs }} followers.
+      <p><span class="me">{% if user.screen_name == stats.me %}<a name="me">You</a> have{% else %}<a href="https://www.twitter.com/{{ stats.me }}/">{{ stats.me }}</a> has{% endif %} </span>
+         {{ stats.mine }} followers, <span class="them">and <a href="https://www.twitter.com/{{ stats.them }}">{{ stats.them }}</a> has</span> {{ stats.theirs }} followers.
         {% if not stats.both %}You have no followers in common.{% endif %}
       </p>
       {% if stats.both %}
@@ -24,7 +28,7 @@
 {% endblock %}
 
 {% block script %}
-<script>
+<script type="text/javascript">
 var e=document.documentElement,
     g=document.getElementsByTagName('body')[0],
     width=window.innerWidth||e.clientWidth||g.clientWidth,
