--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     ul { width: 100%; min-height: 200px; font-size: 1.25em; line-height: 1.4em; }
     ul li { float: left; width: 10em; list-style-type: none; }
     /* ul li a { color: #36f; } */
-    ul li a { color: #36f; }
+    ul li a { color: #666; }
     .clear { clear: both; padding-top: 16px;}
 {% block style %}{% endblock %}
   </style>
