Reverting colours, using @fionamiller's link colour, and making search bigger

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,10 @@
     div#blurb { margin-top: 16px; color: #666; }
     ul { width: 100%; min-height: 200px; font-size: 1.25em; line-height: 1.4em; }
     ul li { float: left; width: 10em; list-style-type: none; }
-    /* ul li a { color: #36f; } */
-    ul li a { color: #666; }
+    a { color: #36f; }
+    a:hover { color: #fff; background: #36f; }
+    ul li a { color: #364e85; }
+    .logout { color: #999; }
     .clear { clear: both; padding-top: 16px;}
 {% block style %}{% endblock %}
   </style>
