--- a/templates/list.html
+++ b/templates/list.html
@@ -2,8 +2,8 @@
 {% block title %}intersect.husk.org. showing {{ stats.me }} and {{ stats.them }}.{% endblock %}
 {% block style %}
     h1 { background-image: url(/static/whitebg50pc.png); padding: 10px; opacity: 1; display: inline; position: relative; left: -10px; }
-    .me a { color: rgb(255, 153, 255); background-color: #fff; }
-    span.them a { color: rgb(153, 204, 255); background-color: #fff; }
+    .me a { color: rgb(255, 102, 255); background-color: #fff; }
+    span.them a { color: rgb(102, 204, 255); background-color: #fff; }
 {% endblock %}
 {% block content %}    
   <div id="content">
@@ -22,7 +22,7 @@
       {% endif %}
     </div>
     
-    <div class="clear"><a href="/">Search again</a>? <a href="/forget">Log out</a>?</div>
+    <h2 class="clear"><a href="/">Search again</a>? <a href="/forget" class="logout">Log out</a>?</h2>
 
   </div>
 {% endblock %}
@@ -52,13 +52,13 @@ var me = svg.append("circle")
             .attr("cx", width/4)
             .attr("cy", midpoint)
             .attr("r", Math.sqrt({{ stats.mine }}/Math.PI)*scale)
-            .style("fill", "rgba(255, 153, 255, .25)");
+            .style("fill", "rgba(255, 102, 255, .25)");
 
 var them = svg.append("circle")
               .attr("cx", 3*width/4)
               .attr("cy", midpoint)
               .attr("r", Math.sqrt({{ stats.theirs }}/Math.PI)*scale)
-              .style("fill", "rgba(153, 204, 255, .25)");
+              .style("fill", "rgba(102, 204, 255, .25)");
 
 </script>
 {% endblock %}
