--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <meta name="author" content="Paul Mison" />
   <meta name="description" content="Paul Mison, elsewhere." />
   <meta name="keywords" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <style type="text/css">
     body { height: 100%; }
