Consistent form/variable names

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div id="blurb" style="margin-top:16px; width: 500px; color: #666;">
       <form action="/intersect" method="POST">
         <p>Enter the Twitter username to find an intersection:</p>
-        <input type="text" name="other_name">
+        <input type="text" name="them">
         <input type="submit" value="Go">
       </form>
       
