--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <h2>Signed in as <a href="https://www.twitter.com/{{ user.screen_name }}">{{ user.screen_name }}</a>.</h2>
 
     <div id="blurb" style="margin-top:16px; width: 500px; color: #666;">
-      <form action="/intersect" method="POST">
+      <form action="/" method="POST">
         <p>Enter the Twitter username to find an intersection:</p>
         <input type="text" name="them">
         <input type="submit" value="Go">
